k8s/app/app-service.yml
kind: Service
apiVersion: v1
metadata:
  name: assets-app
  namespace: dev
spec:
  selector:
    app: assets-app
  type: NodePort
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8080
