k8s/app/app-ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: assets-app-ingress
  namespace: dev
spec:
  rules:
    - http:
        paths:
          - path: /app
            backend:
              serviceName: assets-app
              servicePort: 8080
